Fix the width of the container on mobile view

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -43,10 +43,6 @@
         flex-direction: column;
     }
 
-    .container {
-        width: 90%;
-    }
-
     .card-image-container {
         width: 100%;
     }
