--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,3 +56,9 @@ body {
     text-align: center;
     margin-bottom: 1em;
 }
+
+@media screen and (max-width: 576px) {
+    .container {
+        width: 90%;
+    }
+}
